updated cls() in Main.java